force-app/main/default/objects/Account/fields/Target_Region_Countries_Territories__c.field-meta.xml
<CustomField>
    <fullName>Target_Region_Countries_Territories__c</fullName>
    <label>Target Region/Countries/Territories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>US,Canada</fullName>
            </value>
            <value>
                <fullName>SCEA Region(US,Canada,LATAM)</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>