force-app/main/default/objects/Account/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <description>Tax Code for the Account</description>
    <inlineHelpText>Tax Code for the Account</inlineHelpText>
    <label>Tax Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>