force-app/main/default/objects/Account/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Territory for account</description>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIEA</fullName>
                <default>true</default>
                <label>SIEA</label>
            </value>
            <value>
                <fullName>SIEE</fullName>
            </value>
            <value>
                <fullName>SIEJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>