force-app/main/default/objects/Account/fields/TLA__c.field-meta.xml
<CustomField>
    <fullName>TLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TLA</label>
    <type>Checkbox</type>
</CustomField>