force-app/main/default/objects/Account/fields/Tool_Privilege_Summary__c.field-meta.xml
<CustomField>
    <fullName>Tool_Privilege_Summary__c</fullName>
    <label>Tool Privilege Summary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PS3</fullName>
            </value>
            <value>
                <fullName>PS4</fullName>
            </value>
            <value>
                <fullName>PSTV</fullName>
            </value>
            <value>
                <fullName>Trilithium</fullName>
            </value>
            <value>
                <fullName>Vita</fullName>
            </value>
            <value>
                <fullName>WebMaf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>