force-app/main/default/objects/Account/fields/User_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Group_Type__c</fullName>
    <label>User Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dev Rel</fullName>
            </value>
            <value>
                <fullName>Dev Supp</fullName>
            </value>
            <value>
                <fullName>SBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>