force-app/main/default/objects/Account/fields/User_Journey__c.field-meta.xml
<CustomField>
    <fullName>User_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Journey</label>
    <type>Checkbox</type>
</CustomField>