force-app/main/default/objects/Account/fields/VAT_No__c.field-meta.xml
<CustomField>
    <fullName>VAT_No__c</fullName>
    <label>VAT No</label>
    <length>36</length>
    <type>Text</type>
</CustomField>