force-app/main/default/objects/Account/recordTypes/SIE_RT_Advertiser.recordType-meta.xml
<RecordType>
    <fullName>SIE_RT_Advertiser</fullName>
    <active>true</active>
    <label>Advertiser</label>
</RecordType>