force-app/main/default/objects/Account/recordTypes/SIE_RT_Agency.recordType-meta.xml
<RecordType>
    <fullName>SIE_RT_Agency</fullName>
    <active>true</active>
    <label>Agency</label>
</RecordType>