force-app/main/default/objects/Account/listViews/AdSales_All_SIEJ_Accounts.listView-meta.xml
<ListView>
    <fullName>AdSales_All_SIEJ_Accounts</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>AdSales_CF_Total_Working_Revenue__c</columns>
    <columns>AdSales_CF_Number_of_Working_Opps__c</columns>
    <columns>AdSales_CF_Target_Revenue__c</columns>
    <columns>AdSales_CF_Revenue_Achieved__c</columns>
    <columns>AdSales_CF_Terms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.SIE_RT_Advertiser</value>
    </filters>
    <filters>
        <field>Territory__c</field>
        <operation>equals</operation>
        <value>SIEJ</value>
    </filters>
    <label>AdSales - SIEJ Accounts</label>
</ListView>