force-app/main/default/objects/Account/listViews/AdSales_LV_All_Account_AdSales.listView-meta.xml
<ListView>
    <fullName>AdSales_LV_All_Account_AdSales</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>AdSales_CF_Total_Working_Revenue__c</columns>
    <columns>AdSales_CF_Number_of_Working_Opps__c</columns>
    <columns>AdSales_CF_Target_Revenue__c</columns>
    <columns>AdSales_CF_Revenue_Achieved__c</columns>
    <columns>AdSales_CF_Terms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.SIE_RT_Advertiser,Account.SIE_RT_Agency</value>
    </filters>
    <label>AdSales - All Accounts</label>
</ListView>