force-app/main/default/objects/Account/listViews/AdSales_LV_All_Account_by_Client_Partner.listView-meta.xml
<ListView>
    <fullName>AdSales_LV_All_Account_by_Client_Partner</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AdSales_CF_Total_Working_Revenue__c</columns>
    <columns>AdSales_CF_Number_of_Working_Opps__c</columns>
    <columns>AdSales_CF_Target_Revenue__c</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>AdSales_CF_Number_of_Working_Opps__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>AdSales - My Pipeline</label>
</ListView>