force-app/main/default/objects/Account/listViews/DevRel_Accounts.listView-meta.xml
<ListView>
    <fullName>DevRel_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_CITY</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>AdSales_CF_Email__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.PHONE1</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STREET</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS2_CITY</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS2_COUNTRY</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS2_STATE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS2_STREET</field>
        <operation>notEqual</operation>
    </filters>
    <label>Accounts with Ship and Bill Address</label>
    <sharedTo>
        <group>DevPubRel_Group</group>
    </sharedTo>
</ListView>