force-app/main/default/objects/Account/listViews/My_Account_Teams.listView-meta.xml
<ListView>
    <fullName>My_Account_Teams</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>AdSales_CF_Terms__c</columns>
    <columns>AdSales_CF_Total_Approved_Credit__c</columns>
    <columns>AdSales_CF_Number_of_Working_Opps__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>AdSales_CF_Total_Working_Revenue__c</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.SIE_RT_Advertiser,Account.SIE_RT_Agency</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>TEST</value>
    </filters>
    <label>Adsales - My Account Teams</label>
</ListView>