force-app/main/default/objects/Account/listViews/My_Assigned_account.listView-meta.xml
<ListView>
    <fullName>My_Assigned_account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>AdSales_CF_Number_of_Working_Opps__c</columns>
    <columns>AdSales_CF_Total_Working_Revenue__c</columns>
    <columns>AdSales_CF_Revenue_Achieved__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>AdSales - My Accounts</label>
</ListView>