force-app/main/default/objects/Account/listViews/TPR_Group_Accounts.listView-meta.xml
<ListView>
    <fullName>TPR_Group_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>contains</operation>
        <value>Publisher,Developer,Developer &amp; Publisher</value>
    </filters>
    <label>TPR Group Accounts</label>
    <sharedTo>
        <group>DevPubRel_Group</group>
    </sharedTo>
</ListView>